
glfw_opengl2 = executable('glfw_opengl2' 
                       ,sources : ['glfw_opengl2/main.c']
                       ,dependencies        : [glfw_dep, glew_dep, opengl_dep]
                       ,install : true)

glfw_opengl3 = executable('glfw_opengl3' 
                       ,sources : ['glfw_opengl3/main.c']
                       ,dependencies        : [glfw_dep, glew_dep, opengl_dep]
                       ,install : true)

glfw_opengl4 = executable('glfw_opengl4' 
                       ,sources : ['glfw_opengl4/main.c']
                       ,dependencies        : [glfw_dep, glew_dep, opengl_dep]
                       ,install : true)